--- a/chess_FE/src/App.css
+++ b/chess_FE/src/App.css
@@ -5,7 +5,9 @@ body{
   justify-content: center; 
   align-items: center;
 }
-
+ .Buttons{
+  display: flex;
+}
 .Logo{
   position: relative;
   display:inline-block;
@@ -20,7 +22,6 @@ body{
   background-repeat: no-repeat;
   animation-play-state: running;
 }
-
 .Logo::after{
   content:'';
   position: absolute;
@@ -34,7 +35,12 @@ body{
   background-size: 200%;
   animation: animateborder 4s infinite;
 }
-
+.RegisterForm{
+  padding: 1px;
+  justify-content: center; 
+  align-items: center;
+  height:max-content;
+}
 @keyframes animateborder {
   0% {
     background-position: 0%;
@@ -56,7 +62,7 @@ body{
   padding: 6px;
 }
 
-.PlayButton{
+.RegisterButton, .LoginButton{
   position: relative;
   padding: 5px;
   display:inline-block;
@@ -71,7 +77,7 @@ body{
   font-size: 15px;
 }
 
-.PlayButton::after{
+.RegisterButton::after , .LoginButton::after{
   content:'';
   position: absolute;
   z-index: -1;
