--- a/chess_FE/src/App.css
+++ b/chess_FE/src/App.css
@@ -102,7 +102,7 @@ body{
 }
 .users_btn{
  width: 200px;
-  box-shadow: 0 9px rgba(0, 0, 0, 0.5);   
+  box-shadow: 0 9px 9px 9px rgba(0, 0, 0, 0.5);   
   -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
