--- a/chess_FE/src/App.css
+++ b/chess_FE/src/App.css
@@ -9,7 +9,7 @@ body{
   justify-content: center; 
   align-items: center;
 }
- .Buttons{
+ button{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,12 +41,6 @@ body{
   background-size: 200%;
   animation: animateborder 4s infinite;
 }
-.RegisterForm{
-  padding: 1px;
-  justify-content: center; 
-  align-items: center;
-  height:max-content;
-}
 @keyframes animateborder {
   0% {
     background-position: 0%;
@@ -60,15 +54,18 @@ body{
 }
 
 
-.Header,.Main,.Footer,.users_btn{
+.Header,.Main,.Footer{
   color:white;
   justify-content: center;
   align-items: center;
   text-align: center;
+  display: flex;
   padding: 6px;
 }
 
-.RegisterButton, .LoginButton{
+button{
+  margin-top: 10px;
+  margin-right: 12px;
   position: relative;
   padding: 5px;
   display:inline-block;
@@ -83,7 +80,7 @@ body{
   font-size: 15px;
 }
 
-.RegisterButton::after , .LoginButton::after{
+button::after{
   content:'';
   position: absolute;
   z-index: -1;
@@ -95,22 +92,6 @@ body{
   background-image: linear-gradient(90deg,blue, yellow);
   background-size: 200%;
   animation: animateborder 3s infinite;
-}
-
-.Main{
-  display: flex;
-}
-.users_btn{
- width: 200px;
-  box-shadow: 0 9px 9px 9px rgba(0, 0, 0, 0.5);   
-  -webkit-transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.users_btn:hover{
-  -webkit-transform: translatey(4px);
-  transform: translatey(4px);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5)
 }
 .white{
   background-color: rgb(228, 209, 100);
@@ -153,15 +134,26 @@ body{
   border-radius: 50%;
 }
 
-.Sidebar_Register,.Sidebar_Login{
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  width: 700px;
-  height: 100px;
-}
-
 .Lobby{
   border: rgb(226, 165, 51) solid 1px;
   background-color: rgb(58, 58, 59);
+}
+
+.LoginForm, .RegisterForm{
+  width: 200px;
+  height: 20px;
+  padding: 1px;
+  
+}
+
+.Register_Component, .Login_Component{
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+input{
+  width: 300px;
+  height: 20px;
 }
