--- a/chess_FE/src/App.css
+++ b/chess_FE/src/App.css
@@ -1,12 +1,13 @@
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: Labor;
   color: white;
+  /* overflow: hidden; */
 }
 
-a{
-  text-decoration: none;
+a {
+  /* text-decoration: none; */
   color: white;
   margin-left: 2%;
 }
@@ -16,36 +17,39 @@ a{
   src: url(./assets/fonts/LaborUnion.ttf);
 }
 
-body{
+body {
   background-color: rgba(30, 30, 30, 1);
 }
 
-h1{
+h1 {
   margin-top: 24px;
 }
 
-.Header{
+
+.Header {
   color: white;
   height: 100px;
   width: 100%;
   display: flex;
-  background-color: rgba(47, 47, 47); 
+  background-color: rgba(47, 47, 47);
   border-bottom: white solid 1px;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-nav{
+nav {
   margin-top: 3%;
 }
 
-.Tile img{
+.Tile img {
   width: 48px;
   height: 48px;
   position: relative;
 }
-.Tile{
+
+
+.Tile {
   width: 64px;
   height: 64px;
   display: flex;
@@ -53,27 +57,27 @@ nav{
   align-items: center;
 }
 
-.selected{
+.selected {
   background-color: green;
 }
 
-.available{
+.available {
   height: 16px;
   width: 16px;
   background-color: rgb(75, 138, 75);
   border-radius: 50%;
 }
 
-.white{
-  background-color: rgb(201 ,201 ,201);
+.white {
+  background-color: rgb(201, 201, 201);
 }
 
-.black{
-  background-color: rgb(101 ,101, 101);
+.black {
+  background-color: rgb(101, 101, 101);
 }
 
 
-.Desk{
+.Desk {
   border: black 2px solid;
   width: calc(64px*8);
   height: calc(64px*8);
@@ -81,86 +85,89 @@ nav{
   flex-wrap: wrap;
 
 }
-.Lobby{
+
+.Lobby {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-.Footer{
+.Footer {
+  margin-top: 1%;
   height: 100px;
   width: 100%;
   background-color: rgba(47, 47, 47);
   border-top: white solid 1px;
-  position: fixed;
-  bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-.Footer_Links{
+.App {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.Footer_Links {
   width: 60%;
 }
 
-.Logo{
+.Logo {
   margin-top: 1%;
-  display:  flex;
+  display: flex;
 }
-.Footer_Logo{
+
+.Footer_Logo {
   margin-top: 2%;
 }
-.Navigation{
+
+.Navigation {
   width: 75%;
 }
 
 
-.Register_Component{
-  width: 600px;
-  height: 680px;
-}
-
-.Register_Form{
-  justify-content: center;
-  align-items: center;  
-}
-
-.MainTitles{
+.MainTitles {
   margin-top: 1%;
 }
 
-input{
+input {
   color: black;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-button{
+button {
   color: black;
+  border-radius: 10px;
+  width: 130px;
+  height: 38px;
 }
-.account_navigation{
+
+.account_navigation {
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-.LearnComponent, .MainComponent{
+.LearnComponent,
+.MainComponent {
   margin-top: 2%;
   display: flex;
 }
 
-.logotype{
+.logotype {
   width: 100px;
   height: 100px;
 }
 
-.text-image{
-  width: 350px;
-  height: 350px;
+.text-image {
+  width: 250px;
+  height: 250px;
 }
 
-.Login_Container{
+.Login_Container {
   margin-top: 10%;
   width: 100%;
   display: flex;
@@ -169,7 +176,49 @@ button{
   text-align: center;
 }
 
-.Login_Component{
-  width: 400px;
-  background-color: rgba(100,100,100);
+
+button {
+  color: white;
+  background-color: rgba(30, 30, 30, 1);
+}
+
+.Login_Component {
+  border: white solid 1px;
+  width: 420px;
+  height: 170px;
+  background-color: rgba(100, 100, 100);
+}
+
+.Register_Component {
+  border: white solid 1px;
+  width: 420px;
+  height: 200px;
+  background-color: rgba(100, 100, 100);
+}
+
+.Register_Container {
+  margin-top: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.LoginForm,
+.RegisterForm {
+  display: grid;
+  align-items: center;
+  margin-top: 3%;
+  display: flex;
+}
+
+.TextForInput {
+  width: max-content;
+  text-align: right;
+}
+
+.register_link,
+.login_link {
+  margin-top: 5%;
 }
