--- a/chess_FE/src/Components/game/components/ChessCell/index.module.css
+++ b/chess_FE/src/Components/game/components/ChessCell/index.module.css
@@ -14,11 +14,11 @@
 }
 
 .black {
-	background-color: #b58863;
+	background-color: #575757;
 }
 
 .white {
-	background-color: #f0d9b5;
+	background-color: #b8b8b8;
 }
 
 .selected {
